--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 Django==5.0.1
 django-allauth==0.61.1
-psycopg2-binary==2.9.9
 djangorestframework==3.14.0
-python-decouple==3.8
-Pillow==10.2.0
 django-cors-headers==4.3.1
+python-decouple==3.8
+psycopg2-binary==2.9.9
+Pillow==10.2.0
+python-dotenv==1.0.0
+requests==2.31.0
